assets/css/style.css
/*nav*/
.navbar {
    overflow: hidden;
    background-color: whitesmoke;
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%; /* Full width */
    z-index: 1;
}

.navbar a {
    float: left;
    display: block;
    color: #323133;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

/* Change background on mouse-over */
.navbar a:hover {
    background: #ddd;
    color: black;
}
#anchor4 {
    background-color: #323133;
    height: 1000px;
    width: auto;
}

#anchor1 {
    text-align: center;
    background-color: #323133;
    height: 1000px;
    width: auto;
}

#anchor2 {
    background-color: #323133;
    height: auto;
    width: auto;
}

#anchor3 {
    text-align: center;
    background-color: #323133;
    height: auto;
    width: auto;
}

#about {
    background-color: #f3c086;
    height: 1000px;
    width: auto;
}

#logo {
    padding-top: 175px;
    text-align: center;
}

#logo2 {
    padding-top: 0px;
    text-align: center;
    padding-bottom: 55px;
}

#help {
    height: 155px;
    width: auto;
}

#help2 {
    height: 155px;
    width: auto;
}

p {
    text-align: center;
}

#where {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: #fdfd97;
    font-weight: bold;
}

#no {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: #fdfd97;
    font-weight: bold;
}

#quote {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: white;
    font-weight: bold;
}

#scroll {
    text-align: center;
}
#map {
    margin-top: 55px;
    height: 450px;
    width: 450px;
    display: inline-block;
}

#map-title {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: #f3c086;
    font-weight: bold;
    padding-top: 75px;
}

#news-title {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: #fdf0d5;
    font-weight: bold;
    padding-top: 75px;
    padding-bottom: 55px;
}

#about-title {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: #c97e81;
    font-weight: bold;
    padding-top: 75px;
    padding-bottom: 5px;
}

/*news*/
#news {
    text-align: center;
    background-position: center; 
    width: auto;
    background-size: cover;
    background-attachment: fixed;
  }

.container {
    padding: 20px 0
}

.column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
    float: left; 
}

.main_heading {
    margin: 10px 0 30px;
}

.callout {
    margin-bottom: 40px;
}

select {
    text-transform:capitalize;
}

.loader {
    text-align: center;
    padding: 40px;
}

.uppercase {
    text-transform: uppercase;
}

.find {
    padding-top: 55px;
}

.find-home {
    padding-top: 55px;
    padding-bottom: 55px;
}

.reading {
    padding-top: 55px;
}


#button-find {
    font-family: 'Roboto', sans-serif;
    font-size: 18pt;
    border-width: 3px;
    color: #fdfd97;
}

#button-read {
    font-family: 'Roboto', sans-serif;
    font-size: 18pt;
    border-width: 3px;
    color: #f3c086;
}

#button-about {
    font-family: 'Roboto', sans-serif;
    font-size: 18pt;
    border-width: 3px;
    color: #fdf0d5 ;
}
#button-home {
    font-family: 'Roboto', sans-serif;
    font-size: 18pt;
    border-width: 3px;
    color: #c97e81;
}

#stories {
    color: white;
}

.button {
    background-color: #fdf0d5 !important;
    color: #323133 !important;
}

.button:focus, .button:hover {
    background-color:white !important; 
}

.callout.secondary {
    background-color: transparent !important;
    color: white !important;
    font-family: 'Roboto', sans-serif !important;
}

/*form*/

#form {
    font-family: 'Homemade Apple', cursive !important;
    font-size: 18px;
    text-align: center;
    color: #c97e81;
    font-weight: bold;
    padding-top: 75px;
    padding-bottom: 55px;
}

#sign-up {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: #c97e81;
    font-weight: bold;
    padding-bottom: 5px;
}

/*bio*/

#bio {
    height: 215px;
    width: auto;
    padding-bottom: 15px;
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

#names {
    font-family: 'Homemade Apple', cursive;
    font-size: 28px;
    text-align: center;
    color: white;
    font-weight: bold;
    padding-bottom: 5px;
}

#stats{
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
}

#card {
    text-align: center;
}

.card-form {
    display: inline-block;
    height: 100%;
    width: auto;
}

